# streambatch

./: .gitignore  LICENSE  README.md  pyproject.toml
src/streambatch/: __init__.py  module1.py  savgol.py
tests/: __init__.py  sandbox.py  test.py  test_module1.py
