[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = [
  'numpy>=1.25',
  'pandas>=2.0',
  's3fs>=2023.6',
  'scipy>=1.11',
  'pyarrow>=12.0',
  'fsspec>=2023.6',
  'requests>=2.31'
]

name = "streambatch"
version = "0.0.9"
authors = [
  { name="Tammer Kamel", email="tammer@tammer.com" },
]
description = "Wrapper for Streambatch API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tammer/streambatch"
