[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = [
  'requests',
  'pyarrow',
  's3fs',
  'pandas',
  'scipy',
]

name = "streambatch"
version = "0.1.9"
authors = [
  { name="Tammer Kamel", email="tammer@tammer.com" },
]
description = "Use this package to get daily, 10m resolution NDVI time series data for any location on Earth via the Streambatch.io API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tammer/streambatch"
